Fixing spacing around forms in static note divs.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -561,6 +561,11 @@ h1 {
   line-height: 140%;
 }
 
+.static_note_contents form {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .static_note_contents h3 {
   padding-bottom: 0.25em;
   border-bottom: 1px solid #dddddd;
